<resources>
    <string name="app_name">Vinhedo Bravio App</string>
    <string name="administrative_panel">Painel Adminsitrativo</string>
    <string name="welcome">Bem-vindo(a),  </string>
    <string name="welcomeUser">NOME_USUARIO</string>
    <string name="inventory">Estoque</string>
    <string name="wine">Vinhos</string>
    <string name="customers">Clientes</string>
    <string name="representatives">Representantes</string>
    <string name="orders">Pedidos</string>
    <string name="commissions">Comissões</string>
    <string name="reports">Relatórios</string>
    <string name="users">Usuários</string>
    <string name="contatos">Contatos</string>
    <string name="adm">Página de Admnistração</string>
    <string name="rep">Página de Representante</string>
    <string name="add_wine">+ </string>
    <string name="preencha_nome_vinho">Preencha o nome do vinho!</string>
    <string name="selecione_tipo_vinho">Selecione o tipo de vinho!</string>
    <string name="preencha_safra_vinho">Preencha a safra do vinho!</string>
    <string name="selecione_tipo_composicao">Selecione o tipo de composição!</string>
    <string name="agenda">Agendar Visita</string>
    <string name="visitors">Página de Visitantes</string>
    <string name="representantes">Página de Representantes</string>
    <string name="pieChart">Vinhos mais vendidos</string>
    <string name="lineChart">Faturamento mensal</string>
        <string name="inventory_search">Buscar por nome ou tipo</string>
        <string name="add_new_wine">Cadastrar Novo Vinho</string>
    <string name="update_wine">Atualizar Vinho</string>
            <string name="wine_name">Nome do vinho</string>
            <string name="winery_name">Nome da vinícola</string>
            <string name="commercial_category">Categoria Comercial</string>
            <string name="geographic_origin">Origem geográfica</string>
            <string name="harvest">Safra</string>
            <string name="wine_type">Tipo de vinho</string>
            <string name="description">Descrição</string>
            <string name="tasting_notes">Notas de degustação</string>
            <string name="food_parings">Harmonizações</string>
            <string name="alcohol_content">Teor Alcoólico</string>
            <string name="volume">Volume</string>
            <string name="quantity">Quantidade disponível</string>
            <string name="unit_price">Valor unitário</string>
            <string name="composition">Composição</string>
            <string name="grapes">Uvas</string>
            <string name="acidity">Acidez</string>
            <string name="ideal_temperature">Temperatura ideal</string>
            <string name="estimated_storage_time">Tempo de guarda estimado</string>
            <string name="reviews">Avaliações</string>
    <string name="dashboard">Dashboard</string>
                <string name="add_wine_name">Ex: Cabernet Sauvignon Reserva</string>
                <string name="add_winery_name">Ex: Vinícola Aurora</string>
                <string name="add_commercial_category">Ex: Premium</string>
                <string name="add_country">Ex: Brasil</string>
                <string name="add_harvest">Ex: 2022</string>
                <string name="add_description">Ex: Vinho tinto encorpado, com notas de frutas vermelhas e especiarias.</string>
                <string name="add_tasting_notes">Ex: Frutas vermelhas, especiarias, baunilha</string>
                <string name="add_food_parings">Ex: Carnes vermelhas, massas, queijos</string>
                <string name="add_alcohol_content">Ex: 13.5</string>
                <string name="add_volume">Ex: 750</string>
                <string name="add_quantity">Ex: 24</string>
                <string name="add_unit_price">Ex: 89.90</string>
                <string name="add_acidity">Ex: 5.8</string>
                <string name="add_ideal_temperature">Ex: 16</string>
                <string name="add_estimated_storage_time">Ex: 5 anos</string>
                <string name="add_reviews">Ex: Excelente vinho, recomendo!</string>
                <string name="add_grapes">Ex: Cabernet Sauvignon, Merlot</string>
                <string name="contact">CONTATO</string>
                <string name="contact_name">Nome</string>
                <string name="contact_email">Email</string>
                <string name="contact_message">Mensagem</string>
                <string name="back_button_description">Voltar</string>
                <string name="send_btn">Enviar</string>
                <string name="representative_search_hint">pesquise pelo nome</string>
                <string name="general_informations">Informações Gerais</string>
                <string name="identification_origin">Identificação e Origem</string>
                <string name="grapes_composition">Composição das Uvas</string>
                <string name="technical_characteristics">Características Técnicas</string>
                <string name="experience_reviews">Experiência e Avaliação</string>
                <string name="inventory_marketing">Estoque e Comercialização</string>
    <string name="client_title">Clientes</string>
    <string name="details_wine_name">Nome do vinho:</string>
    <string name="details_winery_name">Vinícola:</string>
    <string name="details_commercial_category">Categoria Comercial:</string>
    <string name="details_description">Descrição:</string>
    <string name="details_harvest">Safra:</string>
    <string name="details_geographic_origin">Origem geográfica:</string>
    <string name="details_wine_type">Tipo:</string>
    <string name="details_composition">Composição:</string>
    <string name="details_grapes">Uvas:</string>
    <string name="details_alcohol_content">Teor Alcoólico:</string>
    <string name="details_volume">Volume:</string>
    <string name="detail_acidity">Acidez:</string>
    <string name="detail_ideal_temperature">Temperatura ideal:</string>
    <string name="detail_estimated_storage_time">Tempo de guarda estimado:</string>
    <string name="details_tasting_notes">Notas de degustação:</string>
    <string name="details_food_parings">Harmonizações:</string>
    <string name="details_reviews">Avaliações:</string>
    <string name="details_quantity">Quantidade:</string>
    <string name="details_unit_price">Valor unitário:</string>
    <string name="order_search">Buscar por cliente ou status</string>
    <string name="order_title">Pedidos</string>
    <string name="add_new_order">Cadastrar Novo Pedido</string>
    <string name="requester_name">Nome do requisitante:</string>
    <string name="order_data">Data:</string>
    <string name="products_title">Produtos</string>
    <string name="total_details">Total:</string>
    <string-array name="status_orders">
        <item>ABERTO</item>
        <item>CONCLUIDO</item>
        <item>CANCELADO</item>
    </string-array>
        <string name="order_products">Itens</string>
        <string name="selected_products">Produtos selecionados:</string>
        <string name="order_payment">Pagamento</string>
        <string name="order_summary">Resumo do Pedido</string>
        <string name="order_customer">Cliente</string>
        <string name="order_user">Usuário</string>
        <string name="order_total">Total</string>
        <string name="order_search_item">Buscar produto ...</string>
        <string name="order_unit_price">Valor unitário: R$ 0,00</string>
        <string name="order_select">Selecione o produto</string>
        <string name="order_quantity">Quantidade</string>
        <string name="add_order_customer">Informe o cliente</string>
        <string name="add_order_user">Informe o usuário</string>
        <string name="add_order_products">Adicionar produtos</string>
    <string name="hint_select_month">Selecionar Mês</string>
    <string name="title_goals">Metas</string>
    <string name="goal_of_month">Meta do mês:</string>
    <string name="goal_achieved">Já atingido:</string>
    <string name="progress">Progresso (%):</string>
    <string name="remaining_orders">Pedidos restantes:</string>
    <string name="status">Status: Faltam x reais/ Meta atingida:</string>
    <string name="title_commission">Comissão</string>
    <string name="total_sales">Total de vendas efetuadas:</string>
    <string name="commission_value">Valor comissão:</string>
    <string name="user_search_hint">Buscar por nome</string>
    <string name="user_title">Usuários</string>
    <string name="add_user_title">Cadastrar novo usuários</string>
    <string name="user_name">Nome</string>
    <string name="user_email">E-mail</string>
    <string name="user_email_hint">Informe seu e-mail</string>
    <string name="user_password">Senha</string>
    <string name="user_password_hint">Digite a senha</string>
    <string name="user_type">Tipo: ADM/Representante</string>
    <string name="user_type_adm">ADM</string>
    <string name="user_type_representative">Representante</string>
    <string name="user_status">Status:</string>
    <string-array name="status_users">
        <item>ATIVO</item>
        <item>INATIVO</item>
    </string-array>
    <string name="costumer_search_hint">Buscar por nome ou CPF/CNPJ</string>
    <string name="customer_title">Clientes</string>
    <string name="add_customer_title">Cadastrar novo cliente</string>
    <string name="customer_name">Nome/Razão Social:</string>
    <string name="customer_add_name">Informe o nome/razão social</string>
    <string name="customer_cpf_cnpj">CPF/CNPJ:</string>
    <string name="customer_add_cpf_cnpj">Informe o CPF ou CNPJ</string>
    <string name="customer_address">Endereço</string>
    <string name="customer_add_adress">Informe o endereço</string>
    <string name="customer_region">Região</string>
    <string name="customer_add_region">Informe a região</string>
    <string name="customer_contacts">Contatos</string>
    <string name="customer_add_contacts">Informe o telefone de contato</string>
    <string name="customer_add_email">Informe o e-mail de contato</string>
    <string name="visit">Visitas</string>
    <string name="add_new_visit">Adicionar Nova Visita</string>
    <string name="visit_filter">Buscar por cliente</string>
    <string name="visit_nome">Nome/Razão Social</string>
    <string name="visit_cpf">CPF/CNPJ</string>
    <string name="visit_address">Endereço</string>
    <string name="visit_contacts">Contatos</string>
    <string name="visit_date_time">Data e Hora</string>
    <string name="visit_select_customer">Selecione o cliente</string>
    <string name="visit_select_address">Informe o endereço</string>
    <string name="visit_add_date_time">Informe a data e horário</string>
    <string name="config_title">Configurações de Estoque</string>
    <string name="exit">Sair</string>
    <string name="save">Salvar</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="close">Fechar</string>
    <string name="login">Entrar</string>
    <string name="action_settings">Settings</string>
    <string name="add">+ </string>
    <string name="update">Atualizar</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="logo_description">Logo da aplicação</string>
    <string name="bem_vindo">Bem-vindo ao universo\n dos nossos vinhos</string>
    <string name="entrar_administrador">Entrar como Administrador</string>
    <string name="entrar_representante">Entrar como Representante</string>
    <string name="explorar_visitante">Explorar como Visitante</string>
    <string name="login_geral">Login como %1$s</string>
    <string name="login_representante">Login como Representante</string>
    <string name="login_adm">Login como Admistrador</string>
    <string name="email">E-mail de acesso</string>
    <string name="senha">Senha</string>
</resources>