<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_text_primary">

<include
        layout="@layout/component_view_custom_header"
        android:id="@+id/component_view_custom_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clipChildren="false"
        android:paddingBottom="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:paddingBottom="20dp"
            android:clipToPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="20dp"
                android:background="@drawable/border_purple"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_name"
                        style="@style/AddVinhoTitle" />

                    <EditText
                        android:id="@+id/customerName"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/customer_add_name"
                        android:inputType="text"
                        android:layout_marginBottom="20dp"
                        style="@style/InputAddVinho"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_cpf_cnpj"
                        style="@style/AddVinhoTitle" />

                    <EditText
                        android:id="@+id/customerCpfCnpj"
                        style="@style/InputAddVinho"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="20dp"
                        android:hint="@string/customer_add_cpf_cnpj"
                        android:inputType="text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_region"
                        style="@style/AddVinhoTitle" />

                    <EditText
                        android:id="@+id/customerRegion"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="text"
                        android:hint="@string/customer_add_region"
                        android:layout_marginBottom="20dp"
                        style="@style/InputAddVinho"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_address"
                        style="@style/AddVinhoTitle" />

                    <EditText
                        android:id="@+id/customerAddress"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="text"
                        android:hint="@string/customer_add_adress"
                        android:layout_marginBottom="20dp"
                        style="@style/InputAddVinho"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_contacts"
                        style="@style/AddVinhoTitle" />

                    <EditText
                        android:id="@+id/customerTelephone"
                        style="@style/InputAddVinho"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="20dp"
                        android:inputType="text"
                        android:hint="@string/customer_add_contacts"/>

                    <EditText
                        android:id="@+id/customerEmail"
                        style="@style/InputAddVinho"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="20dp"
                        android:inputType="text"
                        android:hint="@string/customer_add_email"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:layout_marginBottom="10dp">

                        <com.example.vinhedobravioapp.ui.components.helper.CustomButtonHelper
                            android:id="@+id/cancel_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            app:btn_style="SECONDARY"
                            app:btn_text="@string/cancel" />

                        <com.example.vinhedobravioapp.ui.components.helper.CustomButtonHelper
                            android:id="@+id/save_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1"
                            app:btn_style="SAVE"
                            app:btn_text="@string/save" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>