<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background_dialog">

    <EditText
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/order_select"
        style="@style/InputAddVinho"
        android:focusable="false"
        android:clickable="true"
        android:inputType="none"
        />

    <TextView
        android:id="@+id/productUnitPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_unit_price"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/baskervville"
        android:textStyle="bold"
        android:textColor="@color/button_text_green_primary"/>

    <EditText
        android:id="@+id/productQuantity"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/order_quantity"
        android:inputType="number"
        style="@style/InputAddVinho"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:layout_marginTop="20dp">

        <com.example.vinhedobravioapp.ui.components.helper.CustomButtonHelper
            android:id="@+id/cancel_order_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:btn_style="SECONDARY"
            app:btn_text="@string/cancel"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            />

        <com.example.vinhedobravioapp.ui.components.helper.CustomButtonHelper
            android:id="@+id/saveItem_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:btn_style="SAVE"
            app:btn_text="@string/save"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            />
    </LinearLayout>
</LinearLayout>